# Agape

./: .dockerignore  .gitignore  Dockerfile  Poppins Editor.dc.html  README.md
.claude/: launch.json
backend/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
backend/eval/: fixtures.ts  plan-eval.ts
backend/src/: pipeline.ts  plan.ts  render.ts  scrape.ts  server.ts
backend/src/agape/: api.py  main.py  mapping.py  models.py  scraping.py  templates.py
backend/tests/: test_health.py  test_mapping.py  test_scrape_api.py
frontend/: .e2e.mjs  .gitignore  2026-07-19-141415-local-command-caveatcaveat-the-messages-below.txt  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: scrape.ts
frontend/src/components/: Bento.css  Bento.tsx  CallToAction.css  CallToAction.tsx  Close.css  Close.tsx  Features.css  Features.tsx  Footer.css  Footer.tsx  Founders.css  Founders.tsx  Hero.css  Hero.tsx  HowItWorks.css  HowItWorks.tsx  Logo.css  Logo.tsx  Marquee.css  Marquee.tsx  Nav.css  Nav.tsx  Pricing.css  Pricing.tsx  Sequence.css  Sequence.tsx  Showcase.css  Showcase.tsx  Words.tsx
frontend/src/hooks/: useInView.ts  useJob.ts  usePointerLight.ts  useRender.ts  useReveal.ts  useScrollProgress.ts  useTypewriter.ts
frontend/src/lib/: brand.ts  (+3 more)
poc/: README.md  index.html  package-lock.json  package.json  remotion.config.ts  tsconfig.json
poc/src/: App.tsx  brand.ts  index.css
(+38 files in other folders)
